style.css
html, body {
  height: 100%;
}

body {
  margin: 0;
  padding: 20px;
  min-height: 100vh;
  background: #0f172a;
  color: white;
  font-family: Arial, sans-serif;
  border: 5px solid red; /* remove later */
}

/* MAIN CONTAINER */
.container {
  max-width: 420px;
  margin: 0 auto;
  padding: 16px;
}

/* HEADER */
.header {
  text-align: center;
  margin-bottom: 15px;
  margin-top: 10px;
}

/* BALANCE */
.balance-box {
  background: #1e293b;
  padding: 20px;
  border-radius: 18px;
  text-align: center;
  margin-bottom: 20px;
}

#balance {
  font-size: 28px;
  font-weight: bold;
}

/* DASHBOARD */
.dashboard {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
  margin-bottom: 20px;
}

.card {
  background: #1e293b;
  padding: 15px;
  border-radius: 18px;
  text-align: center;
  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
}

.card p {
  margin: 0;
  opacity: 0.7;
  font-size: 14px;
}

.card h3 {
  margin: 5px 0 0;
  font-size: 22px;
}

.income-card {
  border-left: 4px solid #22c55e;
}

.expense-card {
  border-left: 4px solid #ef4444;
}

.balance-card {
  border-left: 4px solid #3b82f6;
}

/* BUTTONS */
.buttons {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

button {
  flex: 1;
  padding: 12px;
  margin: 5px;
  border: none;
  border-radius: 8px;
  font-size: 16px;
  cursor: pointer;
  transition: 0.2s;
}

button:first-child {
  background: #22c55e;
}

button:last-child {
  background: #ef4444;
}

button:hover {
  opacity: 0.85;
  transform: scale(1.02);
}

/* TRANSACTIONS */
ul {
  list-style: none;
  padding: 0;
}

li {
  background: #1e293b;
  margin-bottom: 10px;
  padding: 10px;
  border-radius: 18px;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.income {
  color: #22c55e;
  font-weight: bold;
}

.expense {
  color: #ef4444;
  font-weight: bold;
}

li div {
  display: flex;
  gap: 5px;
}

li button {
  background: #334155;
  color: white;
  padding: 5px 8px;
  border-radius: 6px;
  cursor: pointer;
}

li button:hover {
  opacity: 0.8;
}

/* LIGHT MODE */
body.light {
  background: #f1f5f9;
  color: #0f172a;
}

body.light .card,
body.light li,
body.light .balance-box {
  background: white;
  color: black;
}

